--- a/backend/package.json
+++ b/backend/package.json
@@ -5,27 +5,33 @@
   "scripts": {
     "dev": "ts-node-dev src/server.ts",
     "build": "tsc",
-    "start": "node dist/server.js"
+    "start": "node dist/server.js",
+    "test": "jest"
   },
   "dependencies": {
+    "@google-cloud/dialogflow": "^7.0.1",
     "@google-cloud/speech": "^7.0.1",
     "@google-cloud/text-to-speech": "^6.0.1",
-    "@google-cloud/dialogflow": "^7.0.1",
-    "axios": "^1.9.0",
-    "dotenv": "^16.5.0",
-    "express": "^5.1.0",
-    "mqtt": "^5.13.0",
-    "multer": "^1.4.5-lts.1",
+    "@google-cloud/translate": "^9.1.0",
     "@types/axios": "^0.9.36",
     "@types/cors": "^2.8.18",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.1",
     "@types/mqtt": "^0.0.34",
-    "@types/multer": "^1.4.12"
+    "@types/multer": "^1.4.12",
+    "axios": "^1.9.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "mqtt": "^5.13.0",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.15.17",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.3.4",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.0.0",
-    "@types/node": "^22.15.17"
+    "typescript": "^5.0.0"
   }
-} 
+}
